// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> renders the <Form /> with an error 1`] = `
<div
  class="form__Container-sc-7952rh-0 gewqyR"
>
  <div
    class="form__Error-sc-7952rh-1 eorCQK"
  >
    Your email address is already being used
  </div>
  <button
    class="form__Submit-sc-7952rh-8 hXmXAi"
    type="submit"
  >
    Sign In
  </button>
</div>
`;

exports[`<Form /> renders the <Form /> with populated data 1`] = `
<div
  class="form__Container-sc-7952rh-0 gewqyR"
>
  <h1
    class="form__Title-sc-7952rh-3 jpnPDD"
  >
    Sign In Now
  </h1>
  <form
    class="form__Base-sc-7952rh-2 hKVaqA"
  >
    <input
      class="form__Input-sc-7952rh-7 SsRbt"
      placeholder="Email address"
    />
    <input
      class="form__Input-sc-7952rh-7 SsRbt"
      placeholder="Password"
      type="password"
    />
    <button
      class="form__Submit-sc-7952rh-8 hXmXAi"
      disabled=""
      type="submit"
    >
      Sign In
    </button>
  </form>
  <h1
    class="form__Text-sc-7952rh-4 cXDmJK"
  >
    New to Netflix? 
  </h1>
  <h1
    class="form__TextSmall-sc-7952rh-5 jODCNK"
  >
    This page is protected by Google reCAPTCHA to ensure you're not a bot. Learn more.
  </h1>
</div>
`;
